# irc-mcp

./: .gitignore  Cargo.toml  README.md  irc-mcp-config.yaml  test-irc-mcp.sh
data/: irc-history.db
docs/superpowers/plans/: 2026-05-28-dcc-zip-extraction.md
docs/superpowers/specs/: 2026-05-28-dcc-zip-extraction-design.md
examples/: test_database_multiserver.rs
src/: config.rs  lib.rs  main.rs  types.rs
src/irc/: client.rs  dcc.rs  mod.rs  sasl.rs  server_manager.rs  zip.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/storage/: cleanup.rs  database.rs  mod.rs
tests/: cleanup_test.rs  config_multiserver_test.rs  config_test.rs  database_multiserver_test.rs  database_test.rs  dcc_test.rs  integration_multiserver_test.rs  mcp_extraction_test.rs  mcp_protocol_test.rs  sasl_test.rs  zip_test.rs
