[package]
name = "irc-mcp-server"
version = "0.1.0"
# Using edition 2021 (2024 not yet stable as of implementation)
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["full"] }
irc = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
shellexpand = "3.1"
futures-util = "0.3"
base64 = "0.22"
zip = "0.6"
filetime = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tower = "0.5"
zip = "0.6"
filetime = "0.2"
